# rs-termz

./: Cargo.toml  README.md
.cargo/: config.toml
src/: cli.rs  io.rs  lib.rs  tui.rs  utils.rs
